# ector

./: .dockerignore  .gitignore  Makefile  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  qa.yml  release.yml
deploy/: Caddyfile.example  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  ector-web.service  ector.env.example
docs/: .qa-known-failures  01-overview.md  02-architecture.md  03-glossary.md  FEATURE_MATRIX.csv  README.md
docs/audit/: 01-bug-catalog.md  02-code-smells.md  03-correctness-risks.md
docs/features/: 01-product-extraction.md  02-budget-detection.md  03-currency-and-price-parsing.md  04-multilingual-support.md  05-model-management-and-caching.md  06-public-api.md  07-cli.md  08-typo-tolerance.md  09-structured-fields.md
docs/fixes/: 01-fix-plan.md
docs/plan/: 01-roadmap.md  02-micro-plan.md  03-refactor-plan.md  04-implementation-status.md  05-robustness-micro-plan.md  06-richer-fields-and-web.md  07-status-2.md  08-web-ui-enhancements.md  09-ui-json-and-perf.md  10-deploy.md
docs/testing/: 01-test-strategy.md  02-test-matrix.md
ector/: __init__.py  __main__.py  api.py  attributes.py  budget.py  cli.py  constraints.py  core.py  dictionary.py  fuzzy.py  intent.py  languages.py  models.py  money.py  normalize.py  products.py  text_utils.py  triggers.py  triggers_fillers.py  types.py
ector/dictionary/: __init__.py  attributes.py  catalog.py  common_words.py  currencies.py  en.py  fr.py  numbers.py
scripts/: _qa_common.py  _seed_matrix.py  bench.py  browser_user_stories.py  diagnose_baseline.py  measure.py  probe_parses.py  qa_gate.py  qa_runner.py  qa_summary.py  run_user_stories.py  snapshot_behavior.py
tests/: test_attributes.py  test_budget.py  test_catalog.py  test_cli.py  test_constraints.py  test_doctests.py  test_extract.py  test_fixture_corpus.py  test_fuzzy.py  test_intent.py  test_languages.py  test_models.py  test_money.py  test_normalize.py  test_products.py  test_regressions.py  test_robustness.py  test_text_utils.py  test_triggers.py  test_web.py
tests/fixtures/: __init__.py  dataset.jsonl  generator.py  harness.py  typos.py
web/: README.md  __init__.py  app.py
web/static/: app.js  index.html  style.css
